# Programming-in-C-and-CPP

ex1/: README.md  cipher.c
ex2/: README  manageStudents.c
ex3/: README.md  tweetsGenerator.c
ex4/: CMakeLists.txt  Makefile  README.md  ex4-itaygil135.7z  hash_funcs.h  hashmap.c  main.c  pairs_for_tests.txt  test_pairs.h  test_suite.c  test_suite.h  vector.c  vector.h
ex5/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Ex5Tests_1.4.cpp  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  main_and_chek_func.cpp
ex5/Ex5_supplied_files/supplied_files/: Activation.h  Dense.h  Matrix.h  MlpNetwork.h  main.cpp
ex6/: CMakeLists.txt  README.md  ex6_tests.cpp  presubmit.cpp  vl_vector.h  vl_vector.h_org  vl_vector_just_passed_tests.h
ex6/presubmit/: presubmit - Copy.cpp
z-extra/: vector.c
z-extra/ex2/: CMakeLists.txt  manageStudents - Copy.c  manageStudents.c
z-extra/lab1/: main.cpp
z-extra/lab2/: CMakeLists.txt  library.c
z-extra/t1/: -3.txt  27_cmp.txt  CMakeLists.txt  README.txt  check_27.txt  check_28.txt  cipher.c  dfsds.txt  encode_hello.txt  test_source_code.c  tester.py
z-extra/tex4_1/: Makefile  hash_funcs.h  hashmap.c  main.c  test_pairs.h  test_suite.c  vector.c
z-extra/tyuta/: CMakeLists.txt  main.cpp
z-extra/untitled/: main.cpp
z-extra/untitled1/: main.c
z-extra/untitled2/: CMakeLists.txt  library.c
z-extra/untitled3/: CMakeLists.txt  library.c
z-extra/untitled4/: CMakeLists.txt  main.c
z-extra/xxx/: CMakeLists.txt  library.c
